--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="links-cont">
             <a href="./html/homepage.html" target="_blank">Home | Filter | Product Listing</a>
             <a href="./html/cartPage.html" target="_blank">Cart Management</a>
+            <a href="./html/wishList.html" target="_blank">WishList Management</a>
         </div>
     </div>
 </body>
