--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <a href="./html/homepage.html" target="_blank">Home | Filter | Product Listing</a>
             <a href="./html/cartPage.html" target="_blank">Cart Management</a>
             <a href="./html/wishList.html" target="_blank">WishList Management</a>
+            <a href="./html/cartPage.html" target="_blank">Login</a>
+            <a href="./html/wishList.html" target="_blank">
+                Sign Up
+            </a>
         </div>
     </div>
 </body>
