added links to index page

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <div class="index-cont">
         Click on above links to visit pages.
         <div class="links-cont">
-            <a href="./html/homepage.html" target="_blank">Home | Filter | Product Listing</a>
+            <a href="./html/home.html" target="_blank">Home</a>
+            <a href="./html/product.html" target="_blank">Filter | Product Listing</a>
             <a href="./html/cartPage.html" target="_blank">Cart Management</a>
             <a href="./html/wishList.html" target="_blank">WishList Management</a>
-            <a href="./html/cartPage.html" target="_blank">Login</a>
-            <a href="./html/wishList.html" target="_blank">
+            <a href="./html/loginpage.html" target="_blank">Login</a>
+            <a href="./html/signuppage.html" target="_blank">
                 Sign Up
             </a>
         </div>
