--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="./html/signuppage.html" target="_blank">
                 Sign Up
             </a>
+            <a href="./html/checkout.html" target="_blank">CheckOut and apply cuppon</a>
         </div>
     </div>
 </body>
