feat:added forget password,checkout,apply coupon

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 Sign Up
             </a>
             <a href="./html/checkout.html" target="_blank">CheckOut and apply cuppon</a>
+            <a href="./html/forgetpsw.html" target="_blank">Forget Password</a>
         </div>
     </div>
 </body>
