feat:added userprofile

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
             <a href="./html/signuppage.html" target="_blank">
                 Sign Up
             </a>
+            <a href="./html/userprofile.html" target="_blank">User Profile</a>
             <a href="./html/checkout.html" target="_blank">CheckOut and apply cuppon</a>
             <a href="./html/forgetpsw.html" target="_blank">Forget Password</a>
+            
         </div>
     </div>
 </body>
